syntax = "proto3";

package aurigraph.v10;

option go_package = "github.com/aurigraph/v10/proto";
option java_package = "io.aurigraph.v10.proto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

// ==================== Core Services ====================

// Main Aurigraph Platform Service
service AurigraphPlatform {
  // Health & Status
  rpc GetHealth(HealthRequest) returns (HealthResponse);
  rpc GetMetrics(MetricsRequest) returns (MetricsResponse);
  
  // Transaction Processing
  rpc SubmitTransaction(Transaction) returns (TransactionResponse);
  rpc BatchSubmitTransactions(BatchTransactionRequest) returns (BatchTransactionResponse);
  rpc GetTransaction(GetTransactionRequest) returns (Transaction);
  
  // Block Operations
  rpc GetBlock(GetBlockRequest) returns (Block);
  rpc SubscribeBlocks(BlockSubscriptionRequest) returns (stream Block);
  
  // Consensus Operations
  rpc ProposeBlock(Block) returns (ProposalResponse);
  rpc VoteOnProposal(Vote) returns (VoteResponse);
  rpc GetConsensusState(ConsensusStateRequest) returns (ConsensusState);
  
  // Node Management
  rpc RegisterNode(NodeRegistration) returns (NodeRegistrationResponse);
  rpc GetNodeStatus(NodeStatusRequest) returns (NodeStatus);
  rpc UpdateNodeConfig(NodeConfig) returns (ConfigUpdateResponse);
}

// Quantum Security Service
service QuantumSecurity {
  rpc GenerateQuantumKeyPair(KeyGenerationRequest) returns (QuantumKeyPair);
  rpc QuantumSign(SignRequest) returns (QuantumSignature);
  rpc QuantumVerify(VerifyRequest) returns (VerificationResult);
  rpc RotateKeys(KeyRotationRequest) returns (KeyRotationResponse);
  rpc GetSecurityMetrics(SecurityMetricsRequest) returns (SecurityMetrics);
}

// AI Orchestration Service
service AIOrchestration {
  rpc SubmitTask(AITask) returns (AITaskResponse);
  rpc GetTaskStatus(TaskStatusRequest) returns (TaskStatus);
  rpc StreamTaskUpdates(TaskStreamRequest) returns (stream TaskUpdate);
  rpc GetAIMetrics(AIMetricsRequest) returns (AIMetrics);
  rpc OptimizeConsensus(OptimizationRequest) returns (OptimizationResult);
}

// Cross-Chain Bridge Service
service CrossChainBridge {
  rpc InitiateBridge(BridgeRequest) returns (BridgeResponse);
  rpc GetBridgeStatus(BridgeStatusRequest) returns (BridgeStatus);
  rpc ListSupportedChains(ListChainsRequest) returns (SupportedChains);
  rpc ExecuteSwap(SwapRequest) returns (SwapResponse);
  rpc GetBridgeMetrics(BridgeMetricsRequest) returns (BridgeMetrics);
}

// Real World Assets Service
service RWAService {
  rpc RegisterAsset(AssetRegistration) returns (AssetRegistrationResponse);
  rpc GetAsset(GetAssetRequest) returns (Asset);
  rpc TokenizeAsset(TokenizationRequest) returns (TokenizationResponse);
  rpc UpdateValuation(ValuationUpdate) returns (ValuationResponse);
  rpc CheckCompliance(ComplianceRequest) returns (ComplianceStatus);
}

// ==================== Core Messages ====================

// Health and Metrics
message HealthRequest {}

message HealthResponse {
  string status = 1;
  string version = 2;
  int64 uptime_seconds = 3;
  map<string, string> components = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message MetricsRequest {
  repeated string metric_names = 1;
  google.protobuf.Timestamp since = 2;
  int32 limit = 3;
}

message MetricsResponse {
  map<string, MetricValue> metrics = 1;
  google.protobuf.Timestamp timestamp = 2;
}

message MetricValue {
  oneof value {
    double float_value = 1;
    int64 int_value = 2;
    string string_value = 3;
    bool bool_value = 4;
  }
}

// Transaction Processing
message Transaction {
  string id = 1;
  string from = 2;
  string to = 3;
  double amount = 4;
  uint64 nonce = 5;
  double gas_price = 6;
  uint64 gas_limit = 7;
  bytes data = 8;
  bytes signature = 9;
  google.protobuf.Timestamp timestamp = 10;
  string type = 11;
  map<string, string> metadata = 12;
}

message TransactionResponse {
  string transaction_id = 1;
  string block_hash = 2;
  uint64 block_number = 3;
  string status = 4;
  string message = 5;
  uint64 gas_used = 6;
  google.protobuf.Timestamp timestamp = 7;
  map<string, string> metadata = 8;
}

message BatchTransactionRequest {
  repeated Transaction transactions = 1;
  bool atomic = 2;
  int32 timeout_seconds = 3;
}

message BatchTransactionResponse {
  string batch_id = 1;
  bool success = 2;
  repeated TransactionResponse results = 3;
  string error_message = 4;
}

// Block Operations
message Block {
  string hash = 1;
  uint64 number = 2;
  string parent_hash = 3;
  repeated Transaction transactions = 4;
  google.protobuf.Timestamp timestamp = 5;
  string validator = 6;
  ConsensusData consensus_data = 7;
  map<string, string> metadata = 8;
}

message BlockSubscriptionRequest {
  uint64 from_block = 1;
  bool include_transactions = 2;
  repeated string transaction_types = 3;
}

// Consensus
message ConsensusData {
  uint64 round = 1;
  string proposal_hash = 2;
  repeated Vote votes = 3;
  double finality_score = 4;
}

message Vote {
  string voter_id = 1;
  string block_hash = 2;
  uint64 round = 3;
  string signature = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message ProposalResponse {
  bool accepted = 1;
  string proposal_id = 2;
  string message = 3;
}

message VoteResponse {
  bool recorded = 1;
  string vote_id = 2;
  string message = 3;
}

message ConsensusStateRequest {}

message ConsensusState {
  uint64 current_round = 1;
  string current_leader = 2;
  repeated string active_validators = 3;
  uint64 total_stake = 4;
  string phase = 5;
  google.protobuf.Timestamp timestamp = 6;
}

// Node Management
message NodeRegistration {
  string node_id = 1;
  string node_type = 2;
  string address = 3;
  int32 port = 4;
  string public_key = 5;
  repeated string capabilities = 6;
  NodeConfig initial_config = 7;
  map<string, string> metadata = 8;
}

message NodeRegistrationResponse {
  bool success = 1;
  string node_id = 2;
  string assigned_role = 3;
  string message = 4;
}

message NodeStatus {
  string node_id = 1;
  string status = 2;
  int64 uptime_seconds = 3;
  double cpu_usage = 4;
  double memory_usage = 5;
  uint64 processed_transactions = 6;
  google.protobuf.Timestamp last_heartbeat = 7;
  map<string, string> details = 8;
}

// Quantum Security
message QuantumKeyPair {
  string algorithm = 1;
  int32 security_level = 2;
  bytes public_key = 3;
  bytes private_key = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp expires_at = 6;
}

message QuantumSignature {
  string algorithm = 1;
  bytes signature = 2;
  bytes public_key = 3;
  google.protobuf.Timestamp created_at = 4;
}

message SignRequest {
  bytes data = 1;
  bytes private_key = 2;
  string algorithm = 3;
}

message VerifyRequest {
  bytes data = 1;
  bytes signature = 2;
  bytes public_key = 3;
  string algorithm = 4;
}

message VerificationResult {
  bool valid = 1;
  string algorithm_used = 2;
  string message = 3;
}

message SecurityMetrics {
  uint64 keys_generated = 1;
  uint64 signatures_created = 2;
  uint64 verifications_performed = 3;
  double quantum_resistance_score = 4;
  google.protobuf.Timestamp last_key_rotation = 5;
}

// AI Tasks
message AITask {
  string task_id = 1;
  string type = 2;
  map<string, string> parameters = 3;
  string priority = 4;
  int32 timeout_seconds = 5;
  google.protobuf.Timestamp created_at = 6;
  map<string, google.protobuf.Any> input_data = 7;
}

message AITaskResponse {
  string task_id = 1;
  bool accepted = 2;
  string estimated_completion = 3;
  string assigned_agent = 4;
  string message = 5;
}

message TaskStatus {
  string task_id = 1;
  string status = 2;
  double progress = 3;
  google.protobuf.Any result = 4;
  string error_message = 5;
  google.protobuf.Timestamp started_at = 6;
  google.protobuf.Timestamp completed_at = 7;
  map<string, string> intermediate_results = 8;
}

message TaskUpdate {
  string task_id = 1;
  string status = 2;
  double progress = 3;
  string message = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message AIMetrics {
  uint64 tasks_completed = 1;
  double average_completion_time = 2;
  double success_rate = 3;
  repeated AgentMetrics agent_metrics = 4;
  map<string, int64> task_types_processed = 5;
}

message AgentMetrics {
  string agent_id = 1;
  string agent_type = 2;
  uint64 tasks_processed = 3;
  double success_rate = 4;
  double average_response_time = 5;
}

// Cross-Chain Bridge
message BridgeRequest {
  string source_chain = 1;
  string target_chain = 2;
  string asset = 3;
  double amount = 4;
  string source_address = 5;
  string target_address = 6;
  double fee = 7;
  int32 timeout_minutes = 8;
}

message BridgeResponse {
  string bridge_id = 1;
  string status = 2;
  double fee = 3;
  string estimated_completion = 4;
  map<string, string> transaction_hashes = 5;
}

message BridgeStatus {
  string bridge_id = 1;
  string status = 2;
  string source_chain = 3;
  string target_chain = 4;
  double amount = 5;
  string source_tx_hash = 6;
  string target_tx_hash = 7;
  double confirmations = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp completed_at = 10;
  string error_message = 11;
}

message SupportedChains {
  repeated ChainInfo chains = 1;
}

message ChainInfo {
  string chain_id = 1;
  string name = 2;
  string network_type = 3;
  bool active = 4;
  repeated string supported_assets = 5;
  double average_block_time = 6;
  int32 required_confirmations = 7;
}

// Real World Assets
message Asset {
  string asset_id = 1;
  string type = 2;
  string name = 3;
  string description = 4;
  double current_value = 5;
  string currency = 6;
  string owner = 7;
  string location = 8;
  map<string, string> attributes = 9;
  ComplianceData compliance = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp last_updated = 12;
}

message TokenizationRequest {
  string asset_id = 1;
  uint64 total_tokens = 2;
  double token_value = 3;
  string token_symbol = 4;
  map<string, string> tokenization_parameters = 5;
}

message TokenizationResponse {
  string token_contract_address = 1;
  uint64 tokens_created = 2;
  string transaction_hash = 3;
  bool success = 4;
  string message = 5;
}

message ComplianceData {
  repeated string jurisdictions = 1;
  string kyc_status = 2;
  string aml_status = 3;
  google.protobuf.Timestamp last_audit = 4;
  repeated string required_actions = 5;
}

// Request Messages
message GetTransactionRequest {
  string transaction_id = 1;
}

message GetBlockRequest {
  oneof block_identifier {
    uint64 block_number = 1;
    string block_hash = 2;
  }
}

message NodeStatusRequest {
  string node_id = 1;
}

message NodeConfig {
  map<string, string> settings = 1;
}

message ConfigUpdateResponse {
  bool success = 1;
  string message = 2;
}

message KeyGenerationRequest {
  string algorithm = 1;
  int32 security_level = 2;
}

message KeyRotationRequest {
  string old_key_id = 1;
  string algorithm = 2;
}

message KeyRotationResponse {
  string new_key_id = 1;
  bytes new_public_key = 2;
  bool success = 3;
}

message SecurityMetricsRequest {}

message TaskStatusRequest {
  string task_id = 1;
}

message TaskStreamRequest {
  string task_id = 1;
}

message OptimizationRequest {
  string target = 1;
  ConsensusParameters current_params = 2;
}

message ConsensusParameters {
  double block_time = 1;
  int32 validator_count = 2;
  double stake_threshold = 3;
  int32 confirmation_blocks = 4;
}

message OptimizationResult {
  ConsensusParameters optimized_params = 1;
  double expected_improvement = 2;
  string reasoning = 3;
}

message BridgeStatusRequest {
  string bridge_id = 1;
}

message ListChainsRequest {
  bool active_only = 1;
}

message SwapRequest {
  string source_asset = 1;
  string target_asset = 2;
  double amount = 3;
  string user_address = 4;
  double slippage_tolerance = 5;
}

message SwapResponse {
  string swap_id = 1;
  double exchange_rate = 2;
  double fee = 3;
  string transaction_hash = 4;
  bool success = 5;
}

message BridgeMetricsRequest {}

message BridgeMetrics {
  uint64 total_bridges = 1;
  double total_value_locked = 2;
  map<string, uint64> chain_volumes = 3;
  double average_completion_time = 4;
  double success_rate = 5;
}

message AssetRegistration {
  Asset asset = 1;
  bytes verification_documents = 2;
}

message AssetRegistrationResponse {
  string asset_id = 1;
  bool success = 2;
  string message = 3;
}

message GetAssetRequest {
  string asset_id = 1;
}

message ValuationUpdate {
  string asset_id = 1;
  double new_value = 2;
  string currency = 3;
  string source = 4;
}

message ValuationResponse {
  bool success = 1;
  string message = 2;
}

message ComplianceRequest {
  string asset_id = 1;
  string jurisdiction = 2;
}

message ComplianceStatus {
  bool compliant = 1;
  repeated string issues = 2;
}

message AIMetricsRequest {}